<resources>
    <string name="app_name">GADS Leaderboard</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="submit">Submit</string>
    <string name="learning_leaders">Learning Leaders</string>
    <string name="skill_iq_leaders">Skill IQ Leaders</string>
    <string name="my_name">Chibuzo Onuoha</string>
    <string name="learning_hours">223 learning hours, Nigeria</string>
    <string name="no_connection">No connection.</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="error_text">Field required.</string>
    <string name="cancel">cancel</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="yes">Yes</string>
    <string name="question">question</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_not_successful">Submission not Successful</string>
    <string name="please_wait">Please wait...</string>
    <string name="valid_email">Valid email required.</string>
</resources>
