<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <ImageView
            android:id="@+id/image_leaders"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:src="@mipmap/ic_gads_launcher"
            android:contentDescription="@string/leaderboard" />

        <TextView
            android:id="@+id/text_leaders_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/image_leaders"
            android:layout_marginTop="4dp"
            android:text="@string/my_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_leaders_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/image_leaders"
            android:layout_below="@id/text_leaders_name"
            android:layout_marginTop="4dp"
            android:text="@string/learning_hours"
            android:textSize="16sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>