<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ProjectSubmissionActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/image_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/leaderboard"
                        android:paddingStart="0dp"
                        android:paddingTop="@dimen/dimen_size_16"
                        android:paddingEnd="@dimen/dimen_size_16"
                        android:paddingBottom="@dimen/dimen_size_16"
                        android:src="@drawable/back_arrow" />

                    <ImageView
                        android:layout_width="220dp"
                        android:layout_height="70dp"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/gads_only" />

                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/text_project_submission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_bar"
            android:layout_centerHorizontal="true"
            android:text="@string/project_submission"
            android:textColor="#E98503"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/text_project_submission"
            android:layout_marginStart="@dimen/dimen_size_16"
            android:layout_marginTop="@dimen/dimen_size_8"
            android:layout_marginEnd="@dimen/dimen_size_16"
            android:background="@drawable/line_gradient" />

        <LinearLayout
            android:id="@+id/linear_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/view_line"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dimen_size_16">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:autofillHints="@string/first_name"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName|textCapWords"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:autofillHints="@string/last_name"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName|textCapWords"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <EditText
                android:id="@+id/edit_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:autofillHints="@string/email_address"
                android:background="@drawable/edittext_background"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_project_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:autofillHints="@string/project_on_github_link"
                android:background="@drawable/edittext_background"
                android:hint="@string/project_on_github_link"
                android:inputType="textUri"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_submit_project"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="48dp"
                android:background="@drawable/button_gradient"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</layout>